--- a/builds/e2e/connectivity.yaml
+++ b/builds/e2e/connectivity.yaml
@@ -78,16 +78,16 @@ jobs:
             echo "deploymentFileName=$(deploymentFileName)"
       - template: templates/set-run-flag.yaml
       - checkout: none
-        condition: and(succeeded(), eq(variables['run.steps'], 1))
+        condition: and(succeeded(), eq(variables['run.flag'], 1))
       - task: AzureKeyVault@1
-        condition: eq(variables['run.steps'], 1)
+        condition: eq(variables['run.flag'], 1)
         displayName: 'Azure Key Vault'
         inputs:
           azureSubscription: $(azure.subscription)
           KeyVaultName: $(azure.keyVault)
           SecretsFilter: 'edgebuilds-azurecr-io-username,edgebuilds-azurecr-io-pwd,EdgeConnectivityTestHubConnString,EdgeConnectivityEventHubConnString,kvLogAnalyticWorkspaceId,kvLogAnalyticSharedKey,EdgeConnectivityStorageAccountConnString'
       - task: DownloadBuildArtifacts@0
-        condition: and(succeeded(), eq(variables['run.steps'], 1))
+        condition: and(succeeded(), eq(variables['run.flag'], 1))
         displayName: 'Download Edgelet Artifacts'
         inputs:
           buildType: specific
@@ -98,7 +98,7 @@ jobs:
           downloadPath: '$(Build.StagingDirectory)'
           artifactName: $(edgelet.artifact.name)
       - task: DownloadBuildArtifacts@0
-        condition: and(succeeded(), eq(variables['run.steps'], 1))
+        condition: and(succeeded(), eq(variables['run.flag'], 1))
         displayName: 'Download Images Artifacts'
         inputs:
           buildType: specific
@@ -223,16 +223,16 @@ jobs:
             echo "deploymentFileName=$(deploymentFileName)"
       - template: templates/set-run-flag.yaml
       - checkout: none
-        condition: and(succeeded(), eq(variables['run.steps'], 1))
+        condition: and(succeeded(), eq(variables['run.flag'], 1))
       - task: AzureKeyVault@1
-        condition: and(succeeded(), eq(variables['run.steps'], 1))
+        condition: and(succeeded(), eq(variables['run.flag'], 1))
         displayName: 'Azure Key Vault'
         inputs:
           azureSubscription: $(azure.subscription)
           KeyVaultName: $(azure.keyVault)
           SecretsFilter: 'edgebuilds-azurecr-io-username,edgebuilds-azurecr-io-pwd,EdgeConnectivityTestHubConnString,EdgeConnectivityEventHubConnString,kvLogAnalyticWorkspaceId,kvLogAnalyticSharedKey,EdgeConnectivityStorageAccountConnString'
       - task: DownloadBuildArtifacts@0
-        condition: and(succeeded(), eq(variables['run.steps'], 1))
+        condition: and(succeeded(), eq(variables['run.flag'], 1))
         displayName: 'Download Edgelet Artifacts'
         inputs:
           buildType: specific
@@ -243,7 +243,7 @@ jobs:
           downloadPath: '$(Build.StagingDirectory)'
           artifactName: $(edgelet.artifact.name)
       - task: DownloadBuildArtifacts@0
-        condition: and(succeeded(), eq(variables['run.steps'], 1))
+        condition: and(succeeded(), eq(variables['run.flag'], 1))
         displayName: 'Download Images Artifacts'
         inputs:
           buildType: specific
@@ -280,8 +280,8 @@ jobs:
           edgeHubRestartTest.sdkOperationTimeout: '$(edgeHubRestartTest.sdkOperationTimeout)'
           testDuration: '$(testDuration)'
           testStartDelay: '$(testStartDelay.arm32)'
-          networkController.frequencies: '$(networkController.frequencies)'
-          networkController.runProfile: '$(networkController.runProfile)'
+          networkController.frequencies: '$(testrun.network.frequencies)'
+          networkController.runProfile: '$(testrun.network.runProfile)'
           logAnalyticsWorkspaceId: '$(kvLogAnalyticWorkspaceId)'
           logAnalyticsSharedKey: '$(kvLogAnalyticSharedKey)'
           testResultCoordinator.logAnalyticsLogType: '$(testResultCoordinator.logAnalyticsLogType)'
