--- a/builds/e2e/templates/set-run-flag.yaml
+++ b/builds/e2e/templates/set-run-flag.yaml
@@ -5,6 +5,9 @@ steps:
     inputs:
       targetType: inline
       script: |
+        # This script is used to set run flag to 1 if:
+        # 1. there is no job canceled before in this build.
+        # 2. config to run variable is set to zero or matched for this config.
         output1=$(curl -s -u :$accessToken --request GET "https://dev.azure.com/msazure/one/_apis/build/builds/$buildId?api-version=5.1" | grep -oe '"status":"cancel')
         output2=$(curl -s -u :$(System.AccessToken) --request GET "https://dev.azure.com/msazure/one/_apis/build/builds/$(Build.BuildId)/Timeline?api-version=5.1" | grep -oe '"result":"canceled"')
         
