--- a/mqtt-broker/mqttd/Cargo.toml
+++ b/mqtt-broker/mqttd/Cargo.toml
@@ -1,10 +1,8 @@
 [package]
 name = "mqttd"
 version = "0.1.0"
-authors = ["Mike Yagley <myagley@gmail.com>"]
+authors = ["Azure IoT Edge Devs"]
 edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 atty = "0.2"
