--- a/builds/checkin/dotnet.yaml
+++ b/builds/checkin/dotnet.yaml
@@ -14,7 +14,7 @@ jobs:
       vmImage: "ubuntu-16.04"
     steps:
       - bash: |
-          git log -m -1 --name-only --first-parent --pretty="" | egrep -i -v '^(edgelet|doc)'
+          git log -m -1 --name-only --first-parent --pretty="" | egrep -i -v '^(edgelet|doc|mqtt-broker)'
           if [[ $? == 0 ]]; then
             echo "Detected changes outside of edgelet and docs folders"
             echo "##vso[task.setvariable variable=RUN_PIPELINE;isOutput=true]TRUE"
