--- a/mqtt/mqtt-broker/Cargo.toml
+++ b/mqtt/mqtt-broker/Cargo.toml
@@ -18,7 +18,7 @@ tracing = "0.1"
 tracing-futures = "0.2"
 uuid = { version = "0.8", features = ["v4"] }
 
-mqtt = { git = "https://github.com/myagley/mqtt", branch = "v0.2.x" }
+mqtt3 = { path = "../mqtt3" }
 
 [dev-dependencies]
 atty = "0.2"
