--- a/tools/IoTEdgeDevOps/VstsPipelineSync/docker/linux-amd64/Dockerfile
+++ b/tools/IoTEdgeDevOps/VstsPipelineSync/docker/linux-amd64/Dockerfile
@@ -8,4 +8,4 @@ WORKDIR /app
 COPY $EXE_DIR/ ./
 
 CMD echo "$(date --utc +"[%Y-%m-%d %H:%M:%S %:z]"): Starting Module" && \
-    exec /usr/bin/dotnet VstsPipelineSync.dll  "$TEST_DASHBOARD_VSTS_PAT" "$TEST_DASHBOARD_DB_CONNECTION_STRING" 00:01:00 refs/heads/master,refs/heads/release/1.0.9,refs/heads/release/1.0.8
+    exec /usr/bin/dotnet VstsPipelineSync.dll refs/heads/master,refs/heads/release/1.0.9,refs/heads/release/1.0.8 00:01:00
